--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "./src",
     "paths": {
       "globalComponents/*": ["globalComponents/*"],
       "assets/*": ["assets/*"],
